Bug 147354 - Compile error on Solaris 8 - kdeutils/kcalc/knumber/knumber.cpp uses finite without including <ieeefp.h> which defines it
Summary: Compile error on Solaris 8 - kdeutils/kcalc/knumber/knumber.cpp uses finite w...
Status: RESOLVED FIXED
Alias: None
Product: kcalc
Classification: Applications
Component: general (show other bugs)
Version: unspecified
Platform: Compiled Sources Solaris
: NOR normal
Target Milestone: ---
Assignee: Klaus Niederkrüger
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-06-29 13:13 UTC by Steve Evans
Modified: 2007-08-01 01:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Steve Evans 2007-06-29 13:13:43 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources
Compiler:          gcc 3.4.6 
OS:                Solaris

I get this compile error on Solaris:

[  0%] Building CXX object kcalc/CMakeFiles/kdeinit_kcalc.dir/knumber/knumber.o
/cad4/stevee/kde-svn/kdeutils/kcalc/knumber/knumber.cpp:679:2: warning: #warning "the cast operator from KNumber to quint64 is probably buggy, when a sign is involved"
/cad4/stevee/kde-svn/kdeutils/kcalc/knumber/knumber.cpp: In constructor `KNumber::KNumber(double)':
/cad4/stevee/kde-svn/kdeutils/kcalc/knumber/knumber.cpp:76: error: `finite' was not declared in this scope

The problem appears to be that the line:

#ifdef HAVE_IEEEEFP_H

has one too many E characters, it should be:

#ifdef HAVE_IEEEFP_H
Comment 1 Pino Toscano 2007-08-01 01:24:41 UTC
SVN commit 694878 by pino:

One 'E' too much.

BUG: 147354


 M  +1 -1      knumber.cpp  


--- trunk/KDE/kdeutils/kcalc/knumber/knumber.cpp #694877:694878
@@ -49,7 +49,7 @@
 
 #ifndef HAVE_FUNC_ISINF
 
-#ifdef HAVE_IEEEEFP_H
+#ifdef HAVE_IEEEFP_H
 #include <ieeefp.h>
 #else
 #include <math.h>