One 'E' too much.

BUG: 147354

svn path=/trunk/KDE/kdeutils/kcalc/; revision=694878